<resources>

    <!-- Login Activity Strings --> 
    <string name="register">Register</string>
    <string name="register_now_label">Register now and join the fun...</string>
    
    <!-- Choose Type Of My Hunt Activity Strings -->
    <string name="not_started">Not started</string>
    <string name="current_hunts">Current</string>
    <string name="completed_hunts">Completed</string>
    
    <!-- Forgotten Password Activity Strings -->
    <string name="new_password">New password:</string>
    <string name="submit">Submit</string>
    <string name="save_new_password">Save Password</string>
    <string name="error_answer_empty">You must enter an answer</string>
    <string name="error_invalid_answer">This answer does not match our records!</string>
    
    <!-- Homepage Activity Strings -->
    <string name="my_hunts">My Hunts</string>
    <string name="browse_hunts">Browse Hunts</string> 
    
    <!-- Licence Activity Strings -->
    <string name="zbar_scanner">ZBar Scanner</string>
    <string name="zbar_licence"> Please see the above link for the MIT Open Source Initiative licence for the usage of ZBar scanner within this application.</string> 
     
    <!-- Login Activity Strings -->
    <string name="forgot_password">  Forgot Password?  </string>
    <string name="licences">Licences</string>
    
    <!-- Register With Hunt Activity Strings -->
    <string name="play">Play</string>
    
    <!-- Register Activity Strings -->
    <string name="security_answer">Security Answer</string>
    <string name="error_answer_invalid_length">Answer must be between 3 and 30 characters</string>
    <string name="error_password_invalid_length">Password must be between 6 and 20 characters</string>
    <string name="error_name_invalid_length">Name must be between 3 and 30 characters</string>
    <string name="error_email_invalid_length">Email address must be between 10 and 30 characters</string>
    <string name="error_invalid_characters">Some characters are invalid.</string>
    <string name="name_alphabetical_characters_only">Name must be made up of only alphabetical characters</string>
    <string name="password_alphanumerical_characters_only">Password must be made up of only alphanumerical characters</string>
    <string name="answer_alphabetical_characters_only">Answer must be made up of only alphabetical characters</string>
    
    <!--  Scan QR Code Activity Strings -->
    <string name="result">Result</string>
    
    <!--  Temporary Data Strings -->
    <string name="temp">Temp Data</string>
    
    <!-- Password Dialog Strings -->
    <string name="enter_password">Enter Password:</string>
    <string name="save_password">Save Password</string>
    
    <!-- Email Address Dialog Strings -->
    <string name="enter_email_address">Enter Email Address</string>
     
    <string name="app_name">Treasure Hunt</string>
    <string name="register_header">Register</string>
    <string name="login_header">Register</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hunt_name_label">Hunt name:</string>
    <string name="save">Save</string>
    <string name="title_activity_generate_hunt">GenerateHuntActivity</string>
    <string name="login">Login</string>
    
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_answer">Security Answer</string>
    <string name="prompt_new_password">New Password</string>
    
    
    <string name="radio_button_staff">Staff</string>
    <string name="radio_button_student">Student</string>
    <string name="register_user_type">User Type</string>
    <string name="title_activity_scan_barcode">ScanBarcodeActivity</string>
    <string name="scan_qr_code">Scan</string>
    <string name="scan_qr_code_header">Scan A QR Code</string>
    <string name="logging_in_spinner_info">Attempting to log you in...</string>
    <string name="error_email_null">Email address cannot be empty</string>
    <string name="error_password_null">Password cannot be empty</string>
    <string name="error_email_too_short">Should be more than 10 characters</string>
    <string name="error_name_null">Name cannot be empty</string>
    <string name="error_name_too_short">Should be more than 4 characters</string>
    <string name="error_email_incorrect_format">Email address must be in a valid email format</string>
    <string name="error_answer_null">Answer cannot be empty</string>
    <string name="choose_hunt_header">Choose A Hunt</string>
    <string name="choose_hunt">Choose Hunt</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="title_activity_register_with_hunt">RegisterWithHuntActivity</string>
    <string name="register_hunt_label">Register</string>
    <string name="shared_preferences">MySharedPreferencesFile</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="my_hunts_label">My hunts</string>
    <string name="browse_hunts_label">Browse Hunts</string>
    <string name="title_activity_my_hunts">MyHuntsActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="my_stats_header">My stats</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="altitude">Altitude:</string>
	<string name="zbar_scanner_licence_link">http://opensource.org/licenses/MIT 

    Copyright (C) 2013 ZbarScanner Authors


    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
	    </string>
    
    
    <color name="light_brown">#FFBDA78A</color>

    <string name="title_activity_map_list">MapListActivity</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="title_activity_choose_type_of_my_hunt">ChooseTypeOfMyHuntActivity</string>
    <string name="title_activity_choose_company">ChooseCompany</string>
    <string name="title_activity_company_password">CompanyPasswordActivity</string>
    <string name="title_activity_forgotten_password">ForgottenPasswordActivity</string>

    <string-array name="security_choices_array">
        <item>What is your mothers maiden name</item>
        <item>What was the name of your first school</item>
        <item>Who is your favourite celebrity</item>
        <item>What was your first pet called</item>
        <item>Where were you born</item>
    </string-array>
    
    

    <string name="title_activity_licence">LicenceActivity</string>

</resources>
