<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LicenceActivity" >

    <TextView
        android:id="@+id/zbar_scanner_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/zbar_scanner"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/zbar_scanner_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zbar_scanner_header"
        android:layout_below="@+id/zbar_scanner_header"
        android:layout_marginTop="16dp"
        android:linksClickable="true"
        android:autoLink="web"
        android:text="@string/zbar_scanner_licence_link" />

    <TextView
        android:id="@+id/zbar_scanner_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zbar_scanner_link"
        android:layout_below="@+id/zbar_scanner_link"
        android:layout_marginTop="18dp"
        android:text="@string/zbar_licence"/>

</RelativeLayout>
