	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/sign_in_button"
	    android:layout_alignParentLeft="true"
	    android:layout_marginBottom="15dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="15dp"
	    android:layout_marginRight="15dp"
	    xmlns:tools="http://schemas.android.com/tools" >


<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CC00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgottenPasswordActivity" >

    <TextView
        android:id="@+id/security_question"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/new_password"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/security_answer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/security_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_password"
        android:layout_below="@+id/security_question"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/prompt_answer"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/security_answer"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/prompt_new_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save_new_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_password"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="14dp"
        android:background="#0099CC"
        android:text="@string/save_new_password"
        android:textColor="#FFFFFF" />

</RelativeLayout>
</RelativeLayout>